fixed not creating msi for windows

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ classes/main_module/home/UiPackingLib$4.class
 myappna-1.0.exe
 faadi_app-1.0.exe
 gift.png
+output_msi/dhaki_tki-1.0.exe
+output_msi/jpacker_final_ver-1.0.exe
+output_msi/poplu_laal-1.0.exe
+jpacker_win-1.0.exe
+pp-1.0.exe
+mimi-1.0.exe
