fixed  jar directory selection for msi packing

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@ output_msi/poplu_laal-1.0.exe
 jpacker_win-1.0.exe
 pp-1.0.exe
 mimi-1.0.exe
+src/libs/jpacker_v1.0.0.jar
+output_msi/kela-1.0.exe
+output_msi/poplu-1.0.exe
+src/libs/README.txt
+output_msi/jpacker_ultimate-1.0.exe
+output_msi/jpacker_v_1-1.0.exe
+output_msi/jpacker_ver_final-1.0.exe
+output_msi/jpacker_vesion_1.0.0.exe
+output_msi/just_sample_app-1.0.exe
+output_msi/mine_app-1.0.exe
+output_msi/moon_knight-1.0.exe
+output_msi/vanila-1.0.exe
+ss/Capture.PNG
+src/libs/jpacker_utlimate.jar
+src/libs/jackper_app.jar
+src/libs/jackper_app.jar
