--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ src/libs/jackper_app.jar
 output_msi/dhaki_tikki-1.0.exe
 output_msi/jpacker_pro-1.0.exe
 src/libs/jpacker_pro.jar
+src/libs/jpacker_pro_executable_jar.zip
