fixed semantic bugs

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ output_msi/dhaki_tikki-1.0.exe
 output_msi/jpacker_pro-1.0.exe
 src/libs/jpacker_pro.jar
 src/libs/jpacker_pro_executable_jar.zip
+classes/test_module/module-info.class
+classes/test_module/home_test/TestMsipack.class
+classes/test_module/home_test/TestMsipack$1.class
